# CuVec

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  CITATION.cff  CONTRIBUTING.md  Makefile  README.rst  index.html  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: comment-bot.yml  test.yml
contrib/: index.html
css/: extra.css
cuvec/: CMakeLists.txt  Config.cmake.in  __init__.py  _common.py  _utils.py  cpython.py  helpers.py  pybind11.py  pycuvec.py  swig.py  swigcuvec.py
cuvec/include/: cuhelpers.h  cuvec.cuh  cuvec.i  cuvec_cpython.cuh  cuvec_pybind11.cuh  pycuvec.cuh
cuvec/src/: cpython.cu  cuhelpers.cu  cuvec.cu  cuvec_swig.i  pybind11.cu  pycuvec.cu  swvec.i
cuvec/src/example_cpython/: CMakeLists.txt  example_mod.cu
cuvec/src/example_mod/: CMakeLists.txt  example_mod.cu
cuvec/src/example_pybind11/: CMakeLists.txt  example_pybind11.cu
cuvec/src/example_swig/: CMakeLists.txt  example_swig.cu  example_swig.i
docs/: extra.js  index.md  licence.md  pydoc-markdown.yml  requirements.txt
docs/custom_theme/js/: extra.js
licence/: index.html
niftypet/: CMakeLists.txt  Config.cmake.in
niftypet/nimpa/: CMakeLists.txt  __init__.py
niftypet/nimpa/include/: cuhelpers.h  cuvec.cuh  pycuvec.cuh
niftypet/nimpa/prc/: CMakeLists.txt
niftypet/nimpa/prc/src/: cuhelpers.h
niftypet/nimpa/src/: cuhelpers.cu  cuvec_mod.cu  pycuvec.cu
ref/cpython/: index.html
ref/pybind11/: index.html
ref/swig/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_common.py  test_cpython.py  test_cuvec.py  test_helpers.py  test_perf.py  test_pybind11.py  test_pycuvec.py  test_swig.py  test_swigcuvec.py
